<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/ic_3_dots"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_list"
                android:title="@string/list"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/action_grid"
                android:title="@string/grid"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_cardview"
                android:title="@string/card_view"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>